# Early-Warning-System

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
.superpowers/sdd/: progress.md  task-10-report.md  task-15-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md
app/: admin_cli.py  auth.py  crypto.py  dashboard.py  db.py  error_reporting.py  execution_lock.py  execution_service.py  executor.py  health.py  log_service.py  mailer.py  main.py  models.py  paths.py  routes.py  scheduler.py  security.py  settings.py  sql_client.py  sql_validator.py  template_renderer.py  web_security.py  worker.py  worker_health.py
app/static/: app.js  styles.css
app/templates/: _csrf.html  base.html  dashboard.html  login.html  logs.html  rule_form.html  rule_versions.html  rules.html  settings.html  smtp_form.html  sql_server_form.html
docs/: deployment.md  operations.md  project-acceptance-report.md  project-requirements.md
docs/superpowers/plans/: 2026-06-29-early-warning-system.md  2026-07-08-duplicate-suppression.md  2026-07-08-dynamic-recipients.md  (+8 more)
tests/: conftest.py  test_admin_cli.py  test_auth.py  test_dashboard.py  test_db.py  test_dependency_configuration.py  test_error_reporting.py  test_execution_lock.py  test_executor.py  test_health.py  test_log_service.py  test_mailer.py  test_routes.py  test_scheduler.py  test_settings.py  test_sql_client.py  test_sql_validator.py  test_template_renderer.py  test_web_security.py  test_worker.py  test_worker_health.py
(+13 files in other folders)
