[project]
name = "early-warning-system"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
  "apscheduler>=3.10",
  "bcrypt>=4.1",
  "cryptography>=42",
  "fastapi>=0.110",
  "itsdangerous>=2.2",
  "jinja2>=3.1.6",
  "pydantic-settings>=2.2",
  "pyodbc>=5.1",
  "python-multipart>=0.0.9",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28.1",
  "pytest>=8",
  "pytest-cov>=7.1.0",
  "ruff>=0.5",
  "pip-audit>=2.7",
  "pip-tools>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
